Fixed smooth scrolling issue on mobile devices

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -65,7 +65,7 @@
 
 html ,
 body {
-	height: 100%;
+	min-height: 100%;
 	font-size: 16px;
 	letter-spacing: 1px;
 	font-weight: 300;
